# election-outomes

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
configs/: backtests.yaml  model.yaml  scenarios.yaml  sources.yaml  sources_house.yaml  sources_live.yaml  sources_senate.yaml
docs/: 2026_methodology_readiness.md  api_requirements.md  data_sources.md  methodology.md  modeling_contract.md  performance.md  technical_appendix.md
fixtures/: fundamentals.csv  house_district_panel.csv  options.csv  president_state_panel.csv  president_state_panel_sample.csv  races.csv  results.csv  senate_state_panel.csv
schemas/artifact_contracts/: cross_office_posterior.schema.json  governor_seat_posterior.schema.json  house_hierarchical_posterior.schema.json  pollster_house_effects.schema.json  posterior_diagnostics.schema.json  posterior_draws.schema.json  posterior_history.schema.json  recalibration_map.schema.json  senate_joint_posterior.schema.json  state_space_trajectory.schema.json
scripts/: generate_house_panel.py  generate_senate_panel.py
src/civic_signal/: __init__.py  cli.py  pipeline.py
src/civic_signal/config/: __init__.py  context.py  scenarios.py
src/civic_signal/features/: __init__.py  builder.py  slicing.py
src/civic_signal/inference/: acceleration_spike.py  cross_office.py  daily_update.py  fundamentals_prior.py  house_hierarchical.py  hyperpriors.py  nuts.py  recalibration.py  senate_joint.py  spike.py  (+1 more)
src/election_outcomes/: cli.py  pipeline.py
tests/: test_diagnostics_report.py  test_learning.py  test_pipeline.py
(+88 files in other folders)
