[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "civic-signal"
version = "0.1.0"
description = "Civic Signal: a research-grade U.S. election forecasting engine with auditable artifacts and verifiable rewards."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.3",
  "arviz>=0.21.0",
  "jax>=0.10.0",
  "jaxlib>=0.10.0",
  "matplotlib>=3.10.0",
  "numba>=0.65.0",
  "numpyro>=0.21.0",
  "numpy>=2.1.0",
  "polars>=1.17.1",
  "pyarrow>=18.1.0",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
  "scikit-learn>=1.5.2",
  "typer>=0.15.1",
]

[project.optional-dependencies]
bayes = ["cmdstanpy>=1.2.5"]
ml = ["lightgbm>=4.5.0"]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.4",
]

[project.scripts]
civic-signal = "civic_signal.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_signal"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/civic_signal/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/civic_signal"]
omit = ["src/civic_signal/cli.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
